--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -6,7 +6,7 @@
 
 
     :root {
-        --color-primary:#222222;
+        --color-primary:#000;
         --color-secondary:#7d7d7d;
         --color-surface:#f9f9f9;
         --color-surface2:#f9f9f9;
@@ -14,6 +14,7 @@
         --color-neutral3:#bfbfbf;
         --color-pink:#fc72ff;
         --color-white:#ffffff;
+        --color-hyperlink:#1573FE;
     }
 
     html {
@@ -21,7 +22,8 @@
     }
 
     body {
-        font-family: 'Inter', sans-serif !important;
+        font-family: 'Poppins', sans-serif !important;
+        background-color: #fff;
         color: var(--color-primary);
     }
 
@@ -51,5 +53,11 @@
         &::-webkit-scrollbar-track {
             background: 0 0;
         }
+    }
+}
+
+@layer components{
+    .container{
+        max-width: 1440px;
     }
 }
