--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -7,12 +7,8 @@
 
     :root {
         --color-primary:#000;
-        --color-secondary:#7d7d7d;
-        --color-surface:#f9f9f9;
-        --color-surface2:#f9f9f9;
-        --color-surface3:#2222220d;
-        --color-neutral3:#bfbfbf;
-        --color-pink:#fc72ff;
+        --color-gray-6:#9E9E9E;
+        --color-gray-3:#EEEEEE;
         --color-white:#ffffff;
         --color-hyperlink:#1573FE;
     }
