--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -57,5 +57,9 @@
 @layer components{
     .container{
         max-width: 1440px;
+        @media screen and (max-width: 1440px) {
+            width: 100%;
+            padding: 0 20px;
+        }
     }
 }
