--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -10,8 +10,10 @@
         --color-gray-3:#EEEEEE;
         --color-gray-4:#D9D9D9;
         --color-gray-6:#9E9E9E;
+        --color-gray-7:#757575;
         --color-gray-8:#616161;
         --color-white:#ffffff;
+        --color-error:#FF0000;
         --color-hyperlink:#1573FE;
     }
 
@@ -26,9 +28,7 @@
     }
 
 
-    .border-base{
-        @apply border border-solid border-surface3 rounded-3xl;
-    }
+    
 
     .scrollbar {
         &:hover {
