--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -12,7 +12,7 @@
     --color-gray-8: #616161;
     --color-white: #ffffff;
     --color-error: #ff0000;
-    --color-warning: #ffb237;
+    --color-warning: #f99f01;
     --color-hyperlink: #1573fe;
     --color-linear-gradient: linear-gradient(91deg, #790c8b 17.53%, #1573fe 84.87%);
   }
