--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -5,6 +5,7 @@
 @layer base {
   :root {
     --color-primary: #000;
+    --color-gray-1: #fafafa;
     --color-gray-2: #f5f5f5;
     --color-gray-3: #eeeeee;
     --color-gray-4: #d9d9d9;
