--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -13,6 +13,7 @@
     --color-gray-7: #757575;
     --color-gray-8: #616161;
     --color-white: #ffffff;
+    --color-success:#049C6B;
     --color-error: #ff0000;
     --color-warning: #f99f01;
     --color-hyperlink: #1573fe;
