--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -13,7 +13,7 @@
     --color-gray-7: #757575;
     --color-gray-8: #616161;
     --color-white: #ffffff;
-    --color-success:#049C6B;
+    --color-success: #049c6b;
     --color-error: #ff0000;
     --color-warning: #f99f01;
     --color-hyperlink: #1573fe;
@@ -67,5 +67,12 @@
   .bg-gray,
   .btn-disabled {
     background: linear-gradient(0deg, #a8a8a8 0%, #a8a8a8 100%);
+  }
+
+  .text-linear {
+    background: linear-gradient(91deg, #790c8b 60%, #1573fe 98%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
