--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -14,6 +14,8 @@
     --color-gray-8: #616161;
     --color-white: #ffffff;
     --color-success: #049c6b;
+    --color-up: #049c6b;
+    --color-down: #ff0000;
     --color-error: #ff0000;
     --color-warning: #f99f01;
     --color-hyperlink: #1573fe;
